Refactored ApiClientService, ImgwApiClient, OpenMeteoApiClient, Alert, Deserializer, Operations, AirportsConfig. Added error handling for no directories and files.