@@ -1,5 +1,6 @@
 package com.application.flightweathertracker.app;
 
+import com.application.flightweathertracker.api.ImgwApiClient;
 import com.application.flightweathertracker.config.AirportsConfig;
 import com.application.flightweathertracker.model.config.airports.Airport;
 import com.application.flightweathertracker.model.imgw.sigmet.ImgwSigmet;
@@ -12,6 +13,7 @@ import org.locationtech.jts.geom.Polygon;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -30,24 +32,31 @@ public class Operations {
 
     private final AirportsConfig airportsConfig;
 
+    private final ImgwApiClient imgwApiClient;
+
     public boolean IsAirportInSigmet(ImgwSigmet sigmet, String icao) {
         try {
-            String airportsConfigJson = Files.readString(Paths.get(airportsConfigPath));
+            if (Files.exists(Paths.get(airportsConfigPath))) {
+                String airportsConfigJson = Files.readString(Paths.get(airportsConfigPath));
 
-            List<List<Double>> coordinates = sigmet.geojson().features().getFirst().geometry().coordinates().getFirst();
-            List<Coordinate> coords = new ArrayList<>();
-            for (List<Double> coordinateSet : coordinates) {
-                coords.add(new Coordinate(coordinateSet.get(0), coordinateSet.get(1)));
+                List<List<Double>> coordinates = sigmet.geojson().features().getFirst().geometry().coordinates().getFirst();
+                List<Coordinate> coords = new ArrayList<>();
+                for (List<Double> coordinateSet : coordinates) {
+                    coords.add(new Coordinate(coordinateSet.get(0), coordinateSet.get(1)));
+                }
+                Coordinate[] coordinatesArray = coords.toArray(new Coordinate[0]);
+                Polygon polygon = geometryFactory.createPolygon(coordinatesArray);
+
+                HashMap<String, Airport> airports = airportsConfig.readAirportsConfig(airportsConfigJson);
+                double longitude = airports.get(icao).longitude();
+                double latitude = airports.get(icao).latitude();
+                Point airportPoint = geometryFactory.createPoint(new Coordinate(longitude, latitude));
+
+                return polygon.covers(airportPoint);
+            } else {
+                airportsConfig.fetchAndSaveAirportsConfig(imgwApiClient.fetchConfigAirportsMetar());
+                throw new FileNotFoundException("Airports config file not found. Creating one...");
             }
-            Coordinate[] coordinatesArray = coords.toArray(new Coordinate[0]);
-            Polygon polygon = geometryFactory.createPolygon(coordinatesArray);
-
-            HashMap<String, Airport> airports = airportsConfig.readAirportsConfig(airportsConfigJson);
-            double longitude = airports.get(icao).longitude();
-            double latitude = airports.get(icao).latitude();
-            Point airportPoint = geometryFactory.createPoint(new Coordinate(longitude, latitude));
-
-            return polygon.covers(airportPoint);
         } catch (IOException e) {
             log.error(e.getMessage());
             throw new RuntimeException(e.getMessage());
